# MeshFx

./: .gitignore  GlyphFX.sln  README.md
GlyphFX.Common/Callbacks/: IEventCallback.cs
GlyphFX.Common/Native/: AbstractNativeRequestBridge.cs  GetDotnetRequest.cs  GetPersonRequest.cs  INativeRequestHandler.cs  NativeRequestCode.cs  NativeRequestCodeHelper.cs
GlyphFX.Core/: GlyphFX.Core.csproj
GlyphFX.DemoWeb/: Program.cs
GlyphFX.DemoWeb/Properties/: launchSettings.json
GlyphFX.DemoWeb/wwwroot/: index.html
GlyphFX.Desktop/: LibNative.cs
GlyphFX.DevConsole/: BufferTest.cs  DemoApp.cs  GlyphFX.DevConsole.csproj  Program.cs  SimpleLoader.cs  model.glb
GlyphFX.Engine/: AppStateManager.cs  Engine.cs  EventApp.cs  GlyphFX.Engine.csproj  GpuStateManager.cs  InputHandler.cs  SharedBuffer.cs  SharedStructs.cs  WorldManager.cs
GlyphFX.Examples/: ExampleHandlers.cs
GlyphFX.Examples.Desktop/: Program.cs
GlyphFX.Examples.Web/: GlyphFX.Examples.Web.csproj  Program.cs
GlyphFX.Examples.Web/Properties/: launchSettings.json
GlyphFX.Examples.Web/wwwroot/: index.html
GlyphFX.WebGpu/: GlyphFX.WebGpu.csproj  Wgpu.cs
GlyphFX.Window/: Test.cs  Winit.cs
docs/: main.js
docs/_framework/: MeshFX.Common.wasm  MeshFX.Common.wasm.br  MeshFX.Core.wasm.br  SharpGLTF.Core.wasm  SharpGLTF.Core.wasm.br  System.Collections.Concurrent.wasm.br  System.Collections.wasm  System.Collections.wasm.br  System.ComponentModel.Primitives.wasm  System.Linq.wasm  System.Linq.wasm.br  System.Memory.wasm  System.Memory.wasm.br  System.Private.Uri.wasm  System.Private.Xml.wasm  System.Private.Xml.wasm.br  System.Runtime.InteropServices.wasm  System.Runtime.Serialization.Formatters.wasm  System.Runtime.Serialization.Formatters.wasm.br  System.Runtime.wasm  blazor.boot.json  blazor.boot.json.br  protobuf-net.Core.wasm  protobuf-net.Core.wasm.br  protobuf-net.wasm  protobuf-net.wasm.br
docs/lib/: meshfx_native.d.ts  meshfx_native.js  meshfx_native_bg.wasm  meshfx_native_bg.wasm.d.ts  package.json
src/: GlyphFX.sln  MeshFX.sln
src/lib-glyphfx-native/glyphfx-native/: Cargo.toml  build.rs
src/lib-glyphfx-native/glyphfx-native/src/: bridge.rs  glyphfx_native.proto  input.rs  lib.rs  person.proto  web_bridge.rs  window.rs
src/lib-glyphfx-native/glyphfx-native/src/graphics/: leg_renderer.rs  material.rs  mod.rs  model.rs  renderer.rs  shader.wgsl  texture.rs
src/lib-glyphfx-native/wgpu_wrapper/: Cargo.toml
src/lib-glyphfx-native/wgpu_wrapper/src/: lib.rs
src/rust-core/glyphfx-winit/web_wrapper/: Cargo.toml
src/rust-core/glyphfx-winit/web_wrapper/src/: lib.rs
src/rust-core/glyphfx-winit/wgpu_wrapper/: Cargo.toml
src/rust-core/glyphfx-winit/wgpu_wrapper/src/: lib.rs  material.rs  model.rs  shader.wgsl  texture.rs
(+174 files in other folders)
