[package]
name = "glyphfx-native"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.29.15"
wgpu = "0.19.3"
bytes = "1.5.0"
prost = "0.12.3"
log = "0.4.21"
bytemuck = { version = "1.14.3", features = [ "derive" ] }
image = "0.25.0"
anyhow = "1.0.80"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.3"
pollster = "0.3.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log = "1.0.0"
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = [
    "HtmlCanvasElement",
    "console",
]}

[build-dependencies]
prost-build = "0.12.3"

[lib]
crate-type = ["cdylib"]