[package]
name = "web_wrapper"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu_wrapper = { path = "../wgpu_wrapper" }
wgpu = "0.19.3"
winit = "0.29.15"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
[dependencies.web-sys]
version = "0.3.69"
features = [
    'HtmlCanvasElement',
    'console',
]

[lib]
crate-type = ["cdylib"]