[package]
name = "wgpu_wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.19.3"
env_logger = "0.11.2"
futures = "0.3.30"
bytemuck = { version = "1.14.3", features = [ "derive" ] }

[lib]
crate-type = ["cdylib", "rlib"]